--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eyre = "0.6.5"
+async-std = "1.9.0"
+futures = "0.3.15"
+async-tungstenite = "0.13.1"
+serde = { version = "1.0.126", features = ["derive"] }
+serde_json = "1.0.64"
