--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ futures = "0.3.15"
 async-tungstenite = "0.13.1"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+rand = "0.8.4"
